After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735798 - Clicking on a result from the shell search provider should open the app details page
Clicking on a result from the shell search provider should open the app detai...
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-09-01 09:26 UTC by Elad Alfassa
Modified: 2014-10-05 20:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screencast (679.99 KB, video/webm)
2014-09-01 09:53 UTC, Elad Alfassa
Details

Description Elad Alfassa 2014-09-01 09:26:19 UTC
Clicking on a result from the shell search provider opens the search page in Software, it would be better if it would open the app details page directly.
Comment 1 Kalev Lember 2014-09-01 09:49:17 UTC
It opens the app details page directly here. Can you do a screencast how to reproduce this, please?
Comment 2 Elad Alfassa 2014-09-01 09:53:40 UTC
Created attachment 284989 [details]
screencast
Comment 3 Richard Hughes 2014-09-01 14:40:12 UTC
Agreed, we used to do this. Was it a deliberate change?
Comment 4 Elad Alfassa 2014-09-01 14:50:22 UTC
(In reply to comment #3)
> Was it a deliberate change?

According to Kalev it's not, as he says he can't reproduce this issue and it works as intended for him (opens the details page).